--- a/tmux.conf
+++ b/tmux.conf
@@ -1,47 +1,134 @@
-# Tmux settings
+set -g default-command "reattach-to-user-namespace -l zsh"
+# tmux display things in 256 colors
+set -g default-terminal "screen-256color"
+set -g status-utf8 on
 
-# Set XTerm key bindings
-setw -g xterm-keys on
+set -g history-limit 20000
 
-# Set colors
-set-option -g default-terminal "screen-256color"
+# automatically renumber tmux windows
+set -g renumber-windows on
 
-# remap prefix to Control + a
-set -g prefix C-a
+# unbind default prefix and set it to Ctrl+a
 unbind C-b
+set -g prefix C-a
 bind C-a send-prefix
 
-# Set reload key to r
-unbind r
-bind r source-file ~/.tmux.conf
+# for nested tmux sessions
+bind-key a send-prefix
 
-# Count sessions start at 1
+# Activity Monitoring
+setw -g monitor-activity off
+set -g visual-activity off
+
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
+
+# make delay shorter
+set -sg escape-time 0
+
+# tile all windows
+unbind =
+bind = select-layout tiled
+
+# cycle through panes
+# unbind C-a
+# unbind o # this is the default key for cycling panes
+#bind ^A select-pane -t:.+
+
+# make window/pane index start with 1
 set -g base-index 1
+setw -g pane-base-index 1
 
-# Use vim bindings
+# set-option -g set-titles on
+# set-option -g set-titles-string "#T - #W"
+# set-window-option -g automatic-rename on
+
+######################
+#### Key Bindings ####
+######################
+
+# reload config file
+bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
+
+# quickly open a new window
+bind N new-window
+
+# split window and fix path for tmux 1.9
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# synchronize all panes in a window
+bind y setw synchronize-panes
+
+# pane movement shortcuts
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Resize pane shortcuts
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
+
+# enable mouse support for switching panes/windows
+# NOTE: This breaks selecting/copying text on OSX
+# To select text as expected, hold Option to disable it (iTerm2)
+set -g mouse-utf8 on
+set -g mouse on
+bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
+bind -n WheelDownPane select-pane -t= \;                 send-keys -M
+
+# maximizing and restoring windows
+unbind Up
+bind Up new-window -d -n fullscreen \; swap-pane -s fullscreen.1 \; select-window -t fullscreen
+unbind Down
+bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
+
+# set vi mode for copy mode
 setw -g mode-keys vi
+# more settings to make copy-mode more vim-like
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
 
-# Remap window navigation to vim
-unbind-key j
-bind-key j select-pane -D 
-unbind-key k
-bind-key k select-pane -U
-unbind-key h
-bind-key h select-pane -L
-unbind-key l
-bind-key l select-pane -R
+# Buffers to/from Mac clipboard, yay tmux book from pragprog
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer")
 
-# Set the title bar
-set -g set-titles on
-set -g set-titles-string '#(whoami) :: #h :: #(curl ipecho.net/plain;echo)'
+##############################
+### Color & Style Settings ###
+##############################
 
-# Set status bar
-set -g status-utf8 on
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 5 
-set -g status-left-length 90
-set -g status-right-length 60
-set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]#(hostname -s)#[fg=white]::#[fg=yellow]#(curl ipecho.net/plain;echo)"
-set -g status-justify left
-set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
+source ~/dotfiles/tmux/theme.sh
+
+######################
+######  Plugins ######
+###################### 
+# List of plugins
+# # Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-online-status  \
+  tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-continuum      \
+'
+
+# Plugin Settings
+
+# Continuum
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm,fullscreen'
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell '~/.tmux/plugins/tpm/tpm'
