New config files

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,51 +13,24 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
-# for nested tmux sessions
-bind-key a send-prefix
-
-# Activity Monitoring
-setw -g monitor-activity off
-set -g visual-activity off
-
-# Rather than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
-
-# make delay shorter
-set -sg escape-time 0
-
-# tile all windows
-unbind =
-bind = select-layout tiled
-
-# cycle through panes
-# unbind C-a
-# unbind o # this is the default key for cycling panes
-#bind ^A select-pane -t:.+
-
-# make window/pane index start with 1
-set -g base-index 1
-setw -g pane-base-index 1
-
-# set-option -g set-titles on
-# set-option -g set-titles-string "#T - #W"
-# set-window-option -g automatic-rename on
+# Enable mouse mode (tmux 2.1 and above)
+set -g mouse on
 
 ######################
-#### Key Bindings ####
-######################
+##### Key Bindings ####
+#######################
 
 # reload config file
-bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
+bind r source ~/.tmux.conf \; display "Config Reloaded!"
 
 # quickly open a new window
 bind N new-window
 
-# split window and fix path for tmux 1.9
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
 # synchronize all panes in a window
 bind y setw synchronize-panes
@@ -77,15 +50,7 @@ bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
-# enable mouse support for switching panes/windows
-# NOTE: This breaks selecting/copying text on OSX
-# To select text as expected, hold Option to disable it (iTerm2)
-set -g mouse-utf8 on
-set -g mouse on
-bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
-bind -n WheelDownPane select-pane -t= \;                 send-keys -M
-
-# maximizing and restoring windows
+#  maximizing and restoring windows
 unbind Up
 bind Up new-window -d -n fullscreen \; swap-pane -s fullscreen.1 \; select-window -t fullscreen
 unbind Down
@@ -110,25 +75,3 @@ bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-
 ##############################
 
 source ~/dotfiles/tmux/theme.sh
-
-######################
-######  Plugins ######
-###################### 
-# List of plugins
-# # Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-online-status  \
-  tmux-plugins/tmux-resurrect      \
-  tmux-plugins/tmux-continuum      \
-'
-
-# Plugin Settings
-
-# Continuum
-set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'iterm,fullscreen'
-
-# Initializes TMUX plugin manager.
-# Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
