--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set -g history-limit 20000
 # automatically renumber tmux windows
 set -g renumber-windows on
 
+# Start numbering at 1
+set -g base-index 1
+
 # unbind default prefix and set it to Ctrl+a
 unbind C-b
 set -g prefix C-a
