--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ set -g renumber-windows on
 
 # Start numbering at 1
 set -g base-index 1
+set-window-option -g pane-base-index 1
 
 # unbind default prefix and set it to Ctrl+a
 unbind C-b
@@ -49,8 +50,8 @@ bind -r C-l select-window -t :+
 
 # Resize pane shortcuts
 bind -r H resize-pane -L 10
-bind -r J resize-pane -D 10
-bind -r K resize-pane -U 10
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
 bind -r L resize-pane -R 10
 
 #  maximizing and restoring windows
