removed Tmuxinator and added tmux-ressurtect

--- a/tmux.conf
+++ b/tmux.conf
@@ -84,6 +84,7 @@ source ~/dotfiles/tmux/theme.sh
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
