added scroll plugin to tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -85,6 +85,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
