Added restore pane setting

--- a/tmux.conf
+++ b/tmux.conf
@@ -74,6 +74,9 @@ bind -t vi-copy 'y' copy-selection
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer")
 
+# Resurect Settings
+set -g @resurrect-capture-pane-contents 'on'
+
 ##############################
 ### Color & Style Settings ###
 ##############################
