updated gitignore and added new tmux plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -97,6 +97,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
