--- a/tmux.conf
+++ b/tmux.conf
@@ -79,8 +79,8 @@ bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-
 set -g @resurrect-capture-pane-contents 'on'
 
 # Continuum Settings
-set -g @continuum-restore 'on'
-set -g @continuum-boot-options 'iterm,fullscreen'
+#set -g @continuum-restore 'on'
+#set -g @continuum-boot-options 'iterm,fullscreen'
 
 ##############################
 ### Color & Style Settings ###
@@ -93,7 +93,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+#set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
