Added titles to panes in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,9 @@ bind C-a send-prefix
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
+# Title
+set -g pane-border-status top
+
 ######################
 ##### Key Bindings ####
 #######################
@@ -77,6 +80,7 @@ bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-
 
 # Resurect Settings
 set -g @resurrect-capture-pane-contents 'on'
+
 
 # Continuum Settings
 #set -g @continuum-restore 'on'
