--- a/teamocil/daily.yml
+++ b/teamocil/daily.yml
@@ -1,8 +1,10 @@
 windows:
   - name: Daily
     root: ~/
-    layout: main-vertical
+    layout: 599e,210x50,0,0[210x35,0,0,0,210x14,0,36{105x14,0,36,12,104x14,106,36,25}]
     panes:
-      - vim
-      - htop
-      - tl
+      commands:
+        - name tiny-care
+        - tiny-care-terminal
+      - clear
+      - clear
