--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,9 @@
 set -g default-command "reattach-to-user-namespace -l zsh"
 # tmux display things in 256 colors
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+
 #set -g status-utf8 on
+#set-option -sg escape-time 10
 
 set -g history-limit 20000
 
