Added candide teamocil scripts

--- a/tmux.conf
+++ b/tmux.conf
@@ -297,6 +297,8 @@ set -g mouse on
 # move status line to top
 #set -g status-position top
 
+set -g pane-border-status top
+
 # quickly open a new window
 bind N new-window
 
