Lots of Coc changes.

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,7 +63,6 @@ base_2='#657b83'  # mid grey
 base_3='#b58900'  # yellow
 base_4='#002b36'  # Darkest grey
 base_5='#93a1a1'  # grey
-base_6='#839496'  # grey
 base_6='#fdf6e3'  # Sand - text
 base_7='#2aa198'  # cyan - right side
 base_8="#e4e4e4"  # White(ish)
@@ -94,7 +93,7 @@ tmux_conf_theme_focused_pane_bg=$base_0
 tmux_conf_theme_pane_border_style=thin
 
 # pane borders colours:
-tmux_conf_theme_pane_border=$base_1
+tmux_conf_theme_pane_border=$base_5
 tmux_conf_theme_pane_active_border=$base_7
 
 # pane indicator colours
@@ -212,7 +211,8 @@ tmux_conf_theme_right_separator_sub='\uE0B3'  #   PowerlineSymbols.otf font, see
 #     - #{username_ssh}
 
 
-tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
+# tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
+tmux_conf_theme_status_left=' ❐ #S '
 tmux_conf_theme_status_right='#{prefix}#{pairing}#{synchronized}  #{?battery_status, #{battery_status},}#{?battery_bar, #{battery_bar},} , %R , %d %b '
 
 # status left style
@@ -306,7 +306,7 @@ tmux_conf_copy_to_os_clipboard=false
 
 # -- user customizations -------------------------------------------------------
 # this is the place to override or undo settings
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # increase history size
