tidying init.vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -372,3 +372,8 @@ setw -g mode-keys vi
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+
+run -b '~/.tmux/plugins/tpm/tpm'
