--- a/tmux.conf
+++ b/tmux.conf
@@ -228,7 +228,7 @@ tmux_conf_theme_right_separator_sub='\uE0B3'  #   PowerlineSymbols.otf font, see
 
 # tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
 tmux_conf_theme_status_left=' ❐ #S '
-tmux_conf_theme_status_right='#{prefix}#{pairing}#{synchronized}  #{?battery_status, #{battery_status},}#{?battery_bar, #{battery_bar},} , %R , %d %b '
+tmux_conf_theme_status_right='#(osascript ~/dotfiles/applescripts/spotify.scpt) #{prefix}#{pairing}#{synchronized}  #{?battery_status, #{battery_status},}#{?battery_bar, #{battery_bar},} , %R , %d %b '
 
 # status left style
 tmux_conf_theme_status_left_fg=$base_6,$base_8,$base_8
