--- a/tmux.conf
+++ b/tmux.conf
@@ -388,8 +388,20 @@ setw -g mode-keys vi
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 
+# Move windows
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 
 run -b '~/.tmux/plugins/tpm/tpm'
+
+
+# Useful tips
+#
+#
+#
+# Reorder windows - use prefix first
+# swap-window -s 3 -t
