Going light for the day

--- a/tmux.conf
+++ b/tmux.conf
@@ -41,18 +41,18 @@ tmux_conf_new_session_prompt=false
 
 # -- Citylights colors ---------------------------------------------------------------
 
-base_0='#539AFC'  # blue
-base_1='#e3e5e3'  # gray
-base_2='#5EC4FF'  # mid blue
-base_3='#5EC4FF'  # yellow
-base_4='#434C5E'  # Darkest grey
-base_5='#4C566A'  # Dark grey
-base_6='#81A1C1'  # Light blue - main
-base_6='#718CA1'  # Mid grey - text
-base_7='#025e86'  # green blue - right side
-base_8="#718CA1"  # White(ish)
-base_9='#8BD49C'  # green
-base_10='#D98E48' # Red
+# base_0='#539AFC'  # blue
+# base_1='#e3e5e3'  # gray
+# base_2='#5EC4FF'  # mid blue
+# base_3='#5EC4FF'  # yellow
+# base_4='#434C5E'  # Darkest grey
+# base_5='#4C566A'  # Dark grey
+# base_6='#81A1C1'  # Light blue - main
+# base_6='#718CA1'  # Mid grey - text
+# base_7='#025e86'  # green blue - right side
+# base_8="#718CA1"  # White(ish)
+# base_9='#8BD49C'  # green
+# base_10='#D98E48' # Red
 
 # -- Nord colors ---------------------------------------------------------------
 
@@ -71,18 +71,17 @@ base_10='#D98E48' # Red
 
 # -- Solorized Light colors ----------------------------------------------------
 
-
-#base_0='#d33682'  # magenta
-#base_1='#268bd2'  # blue
-#base_2='#657b83'  # mid grey
-#base_3='#b58900'  # yellow
-#base_4='#002b36'  # Darkest grey
-#base_5='#93a1a1'  # grey
-#base_6='#fdf6e3'  # Sand - text
-#base_7='#2aa198'  # cyan - right side
-#base_8="#e4e4e4"  # White(ish)
-#base_9='#6c71c4'  # green
-#base_10='#dc322f' # Red
+base_0='#d33682'  # magenta
+base_1='#268bd2'  # blue
+base_2='#657b83'  # mid grey
+base_3='#b58900'  # yellow
+base_4='#002b36'  # Darkest grey
+base_5='#93a1a1'  # grey
+base_6='#fdf6e3'  # Sand - text
+base_7='#2aa198'  # cyan - right side
+base_8="#e4e4e4"  # White(ish)
+base_9='#6c71c4'  # green
+base_10='#dc322f' # Red
 
 # RGB 24-bit colour support (tmux >= 2.2), possible values are:
 #  - true
@@ -405,3 +404,4 @@ run -b '~/.tmux/plugins/tpm/tpm'
 #
 # Reorder windows - use prefix first
 # swap-window -s 3 -t
+# move panes - prefix + ctrl + o
