--- a/tmux.conf
+++ b/tmux.conf
@@ -56,32 +56,32 @@ tmux_conf_new_session_prompt=false
 
 # -- Nord colors ---------------------------------------------------------------
 
-# base_0='#0087d7'  # blue
-# base_1='#444444'  # gray
-# base_2='#81A1C1'  # mid blue
-# base_3='#EBCB8B'  # yellow
-# base_4='#434C5E'  # Darkest grey
-# base_5='#4C566A'  # Dark grey
-# base_6='#81A1C1'  # Light blue - main
-# base_6='#8a8a8a'  # Mid grey - text
-# base_7='#88C0D0'  # green blue - right side
-# base_8="#e4e4e4"  # White(ish)
-# base_9='#8FBCBB'  # green
-# base_10='#d70000' # Red
+base_0='#0087d7'  # blue
+base_1='#444444'  # gray
+base_2='#81A1C1'  # mid blue
+base_3='#EBCB8B'  # yellow
+base_4='#434C5E'  # Darkest grey
+base_5='#4C566A'  # Dark grey
+base_6='#81A1C1'  # Light blue - main
+base_6='#8a8a8a'  # Mid grey - text
+base_7='#88C0D0'  # green blue - right side
+base_8="#e4e4e4"  # White(ish)
+base_9='#8FBCBB'  # green
+base_10='#d70000' # Red
 
 # -- Solorized Light colors ----------------------------------------------------
 
-base_0='#d33682'  # magenta
-base_1='#268bd2'  # blue
-base_2='#657b83'  # mid grey
-base_3='#b58900'  # yellow
-base_4='#002b36'  # Darkest grey
-base_5='#93a1a1'  # grey
-base_6='#fdf6e3'  # Sand - text
-base_7='#2aa198'  # cyan - right side
-base_8="#e4e4e4"  # White(ish)
-base_9='#6c71c4'  # green
-base_10='#dc322f' # Red
+# base_0='#d33682'  # magenta
+# base_1='#268bd2'  # blue
+# base_2='#657b83'  # mid grey
+# base_3='#b58900'  # yellow
+# base_4='#002b36'  # Darkest grey
+# base_5='#93a1a1'  # grey
+# base_6='#fdf6e3'  # Sand - text
+# base_7='#2aa198'  # cyan - right side
+# base_8="#e4e4e4"  # White(ish)
+# base_9='#6c71c4'  # green
+# base_10='#dc322f' # Red
 
 # RGB 24-bit colour support (tmux >= 2.2), possible values are:
 #  - true
