--- a/teamocil/navy.yml
+++ b/teamocil/navy.yml
@@ -1,19 +1,11 @@
 windows:
   - name: Navy
     root: ~/code/work
-    layout: 09f7,210x50,0,0[210x35,0,0{65x35,0,0,15,72x35,66,0,19,71x35,139,0,20},210x14,0,36,18]
+    layout: 062d,255x65,0,0[255x42,0,0,0,255x22,0,43,13]
     panes:
       - commands:
-        - name Heartwood
-        - cd heartwood
-
-      - commands:
-        - name public-api
-        - cd public-api
-
-      - commands:
-        - name
-
+        - name logs
+        - navy logs
       - commands:
         - name Navy
         - navy ps
