--- a/alacritty.yml
+++ b/alacritty.yml
@@ -461,36 +461,37 @@ key_bindings:
   - { key: Down,     mods: Command,       chars: "\x06\x4a" }
   - { key: Up,       mods: Command,       chars: "\x06\x4b" }
   - { key: Right,    mods: Command,       chars: "\x06\x4c" }
-# Colors (Oceanic Next)
+# Ariake Dark
 colors:
   # Default colors
   primary:
-    background: '#1b2b34'
-    foreground: '#d8dee9'
+    background: '#343847'
+    foreground: '#eceef0'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
     text: '#1b2b34'
-    cursor: '#ffffff'
+    cursor: '#dda2f6'
+    # cursor: '#edeeed'
 
   # Normal colors
   normal:
-    black:   '#343d46'
-    red:     '#EC5f67'
-    green:   '#99C794'
-    yellow:  '#FAC863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#d8dee9'
+    black:   '#546d79'
+    red:     '#7d7edc'
+    green:   '#69f0ad'
+    yellow:  '#85b1df'
+    blue:    '#4d89ca'
+    magenta: '#dda2f6'
+    cyan:    '#93ddfb'
+    white:   '#fefefe'
 
   # Bright colors
   bright:
-    black:   '#343d46'
-    red:     '#EC5f67'
-    green:   '#99C794'
-    yellow:  '#FAC863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#d8dee9'
+    black:   '#546d79'
+    red:     '#7d7edc'
+    green:   '#69f0ad'
+    yellow:  '#85b1df'
+    blue:    '#4d89ca'
+    magenta: '#dda2f6'
+    cyan:    '#93ddfb'
+    white:   '#fefefe'
