--- a/coc-settings.json
+++ b/coc-settings.json
@@ -78,5 +78,6 @@
   "codeLens.enable": false,
   "go.goplsOptions": {
     "completeUnimported": true
-  }
+  },
+  "go.goplsPath": "/home/james.best/go/bin/gopls"
 }
