--- a/alacritty.yml
+++ b/alacritty.yml
@@ -461,37 +461,28 @@ key_bindings:
   - { key: Down,     mods: Command,       chars: "\x06\x4a" }
   - { key: Up,       mods: Command,       chars: "\x06\x4b" }
   - { key: Right,    mods: Command,       chars: "\x06\x4c" }
-# Ariake Dark
 colors:
-  # Default colors
   primary:
-    background: '#343847'
-    foreground: '#eceef0'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
+    background: '0x1e1c31'
+    foreground: '0xcbe3e7'
   cursor:
-    text: '#1b2b34'
-    cursor: '#dda2f6'
-    # cursor: '#edeeed'
-
-  # Normal colors
+    text: '0x1e1c31'
+    cursor: '0xa1efd3'
   normal:
-    black:   '#546d79'
-    red:     '#7d7edc'
-    green:   '#69f0ad'
-    yellow:  '#85b1df'
-    blue:    '#4d89ca'
-    magenta: '#dda2f6'
-    cyan:    '#93ddfb'
-    white:   '#fefefe'
-
-  # Bright colors
+    black: '0x1e1c31'
+    red: '0xf48fb1'
+    green: '0xa1efd3'
+    yellow: '0xffe6b3'
+    blue: '0x91ddff'
+    magenta: '0xd4bfff'
+    cyan: '0x87dfeb'
+    white: '0xcbe3e7'
   bright:
-    black:   '#546d79'
-    red:     '#7d7edc'
-    green:   '#69f0ad'
-    yellow:  '#85b1df'
-    blue:    '#4d89ca'
-    magenta: '#dda2f6'
-    cyan:    '#93ddfb'
-    white:   '#fefefe'
+    black: '0x585273'
+    red: '0xf02e6e'
+    green: '0x62d196'
+    yellow: '0xf2b482'
+    blue: '0x65b2ff'
+    magenta: '0xa37acc'
+    cyan: '0x63f2f1'
+    white: '0x8a889d'
