--- a/tmux.conf
+++ b/tmux.conf
@@ -320,7 +320,7 @@ tmux_conf_copy_to_os_clipboard=false
 
 # -- user customizations -------------------------------------------------------
 # this is the place to override or undo settings
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 # set -ga terminal-overrides ",screen-256color:Tc"
 
