--- a/alacritty/base.yml
+++ b/alacritty/base.yml
@@ -52,19 +52,22 @@ font:
   # The normal (roman) font face to use.
   normal:
     #family: Dank Mono
-    family: FiraMono Nerd Font
+    # family: FiraMono Nerd Font
+    family: Hack Nerd Font Mono
     style: Regular
 
   # The bold font face
   bold:
     #family: Dank Mono
-    family: FiraMono Nerd Font
+    # family: FiraMono Nerd Font
+    family: Hack Nerd Font Mono
     style: Bold
 
   # The italic font face
   italic:
     # family: Dank Mono
-    family: FiraMono Nerd Font
+    # family: FiraMono Nerd Font
+    family: Hack Nerd Font Mono
     style: Italic
 
   # Point size of the font
