New theme and a bit of tidying

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,35 +39,34 @@ tmux_conf_new_session_prompt=false
 
 # -- display -------------------------------------------------------------------
 
-# -- Citylights colors ---------------------------------------------------------------
+# -- Embark colors ---------------------------------------------------------------
 
-# base_0='#539AFC'  # blue
-# base_1='#e3e5e3'  # gray
-# base_2='#5EC4FF'  # mid blue
-# base_3='#5EC4FF'  # yellow
-# base_4='#434C5E'  # Darkest grey
-# base_5='#4C566A'  # Dark grey
-# base_6='#81A1C1'  # Light blue - main
-# base_6='#718CA1'  # Mid grey - text
-# base_7='#025e86'  # green blue - right side
-# base_8="#718CA1"  # White(ish)
-# base_9='#8BD49C'  # green
-# base_10='#D98E48' # Red
-
-# -- Nord colors ---------------------------------------------------------------
-
-base_0='#0087d7'  # blue
-base_1='#444444'  # gray
-base_2='#81A1C1'  # mid blue
-base_3='#EBCB8B'  # yellow
+base_0='#539AFC'  # blue
+base_1='#91DDFF'  # gray
+base_2='#65B2FF'  # mid blue
+base_3='#65B2FF'  # yellow
 base_4='#434C5E'  # Darkest grey
 base_5='#4C566A'  # Dark grey
 base_6='#81A1C1'  # Light blue - main
-base_6='#8a8a8a'  # Mid grey - text
-base_7='#88C0D0'  # green blue - right side
-base_8="#e4e4e4"  # White(ish)
-base_9='#8FBCBB'  # green
-base_10='#d70000' # Red
+base_7='#2D2B40'  # green blue - right side
+base_8="#718CA1"  # White(ish)
+base_9='#100E23'  # green
+base_10='#D98E48' # Red
+
+# -- Nord colors ---------------------------------------------------------------
+
+# base_0='#0087d7'  # blue
+# base_1='#444444'  # gray
+# base_2='#81A1C1'  # mid blue
+# base_3='#EBCB8B'  # yellow
+# base_4='#434C5E'  # Darkest grey
+# base_5='#4C566A'  # Dark grey
+# base_6='#81A1C1'  # Light blue - main
+# base_6='#8a8a8a'  # Mid grey - text
+# base_7='#88C0D0'  # green blue - right side
+# base_8="#e4e4e4"  # White(ish)
+# base_9='#8FBCBB'  # green
+# base_10='#d70000' # Red
 
 # -- Solorized Light colors ----------------------------------------------------
 
@@ -131,7 +130,7 @@ tmux_conf_theme_mode_attr='bold'
 
 # status line style
 tmux_conf_theme_status_fg=$base_6
-tmux_conf_theme_status_bg=$base_5
+tmux_conf_theme_status_bg=$base_9
 tmux_conf_theme_status_attr='none'
 
 # terminal title
@@ -190,10 +189,10 @@ tmux_conf_theme_window_status_last_bg='default'
 tmux_conf_theme_window_status_last_attr='none'
 
 # status left/right sections separators
-#tmux_conf_theme_left_separator_main=''
-#tmux_conf_theme_left_separator_sub='|'
-#tmux_conf_theme_right_separator_main=''
-#tmux_conf_theme_right_separator_sub='|'
+# tmux_conf_theme_left_separator_main=''
+# tmux_conf_theme_left_separator_sub='|'
+# tmux_conf_theme_right_separator_main=''
+# tmux_conf_theme_right_separator_sub='|'
 tmux_conf_theme_left_separator_main='\uE0B0'  # /!\ you don't need to install Powerline
 tmux_conf_theme_left_separator_sub='\uE0B1'   #   you only need fonts patched with
 tmux_conf_theme_right_separator_main='\uE0B2' #   Powerline symbols or the standalone
@@ -227,11 +226,11 @@ tmux_conf_theme_right_separator_sub='\uE0B3'  #   PowerlineSymbols.otf font, see
 
 tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
 # tmux_conf_theme_status_left=' ❐ #S '
-tmux_conf_theme_status_right='#{prefix}#{pairing}#{synchronized}  #{?battery_status, #{battery_status},}#{?battery_bar, #{battery_bar},} , %R , %d %b '
+tmux_conf_theme_status_right='%R , %d %b '
 
 # status left style
-tmux_conf_theme_status_left_fg=$base_6,$base_8,$base_8
-tmux_conf_theme_status_left_bg=$base_3,$base_9,$base_6
+tmux_conf_theme_status_left_fg=$base_8,$base_8
+tmux_conf_theme_status_left_bg=$base_7,$base_7
 tmux_conf_theme_status_left_attr='bold,none,none'
 
 # status right style
@@ -393,7 +392,6 @@ bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
