Update yabai config, add wtfutil config

--- a/tmux.conf
+++ b/tmux.conf
@@ -224,7 +224,8 @@ tmux_conf_theme_right_separator_sub='\uE0B3'  #   PowerlineSymbols.otf font, see
 #     - #{username_ssh}
 
 
-tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
+tmux_conf_theme_status_left=' ❐ #S | '
+# tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
 # tmux_conf_theme_status_left=' ❐ #S '
 tmux_conf_theme_status_right='%R , %d %b '
 
