--- a/kitty.conf
+++ b/kitty.conf
@@ -30,7 +30,7 @@ bold_italic_font MonoLisa Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 17.0
 
 #: Font size (in pts)
 
@@ -2752,56 +2752,43 @@ bell_on_tab no
 
 #: }}}
 
-# Embark (https://github.com/skbolton/embark/) {{{
-background #1e1c31
-foreground #EEFFFF
-cursor #A1EFD3
-selection_background  #fbfcfc
-
-# black
-color0 #1e1c31
-color8 #3E3859
-
-# red
-color1 #F0719B
-color9 #F02E6E
-
-# green
-color2 #A1EFD3
-color10 #2CE592
-
-# yellow
-color3       #ffe9aa
-color11      #ffb378
-
-# blue
-color4 #57C7FF
-color12 #1DA0E2
-
-# magenta
-color5 #C792EA
-color13 #A742EA
-
-# cyan
-color6       #87DFEB
-color14      #63f2f1
-
-# white
-color7 #F8F8F2
-color15 #a6b3cc
-
-
-active_border_color #A1EFD3
-inactive_border_color #a6b3cc
-bell_border_color #f56574
-
-active_tab_foreground   #222433 
-active_tab_background   #63f2f1
-active_tab_font_style   bold
-
-inactive_tab_foreground #63f2f1
-inactive_tab_background #222433 
-inactive_tab_font_style normal
-
-# }}}
-
+  # TokyoNight colors for Kitty
+  
+  background #e1e2e7
+  foreground #3760bf
+  selection_background #99a7df
+  selection_foreground #3760bf
+  url_color #387068
+  cursor #3760bf
+  
+  # Tabs
+  active_tab_background #2e7de9
+  active_tab_foreground #d4d6e4
+  inactive_tab_background #c4c8da
+  inactive_tab_foreground #8990b3
+  #tab_bar_background #e9e9ed
+  
+  # normal
+  color0 #e9e9ed
+  color1 #f52a65
+  color2 #587539
+  color3 #8c6c3e
+  color4 #2e7de9
+  color5 #9854f1
+  color6 #007197
+  color7 #6172b0
+  
+  # bright
+  color8 #a1a6c5
+  color9 #f52a65
+  color10 #587539
+  color11 #8c6c3e
+  color12 #2e7de9
+  color13 #9854f1
+  color14 #007197
+  color15 #3760bf
+  
+  # extended colors
+  color16 #b15c00
+  color17 #c64343
+  
