New daily teamocil template

--- a/teamocil/daily.yml
+++ b/teamocil/daily.yml
@@ -1,10 +1,9 @@
 windows:
   - name: Daily
     root: ~/
-    layout: 599e,210x50,0,0[210x35,0,0,0,210x14,0,36{105x14,0,36,12,104x14,106,36,25}]
+    layout: 90be,320x90,0,0[320x25,0,0,0,320x64,0,26,2]
     panes:
       - commands:
-        - name tiny-care
-        - tiny-care-terminal
-      - clear
-      - clear
+        - name Todo
+        - vit
+      - wtfutil
