--- a/tmux.conf
+++ b/tmux.conf
@@ -224,8 +224,8 @@ tmux_conf_theme_right_separator_sub='\uE0B3'  #   PowerlineSymbols.otf font, see
 #     - #{username_ssh}
 
 
-tmux_conf_theme_status_left=' ❐ #S | '
-# tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
+# tmux_conf_theme_status_left=' ❐ #S | '
+tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
 # tmux_conf_theme_status_left=' ❐ #S '
 tmux_conf_theme_status_right='%R , %d %b '
 
@@ -320,8 +320,12 @@ tmux_conf_copy_to_os_clipboard=false
 
 # -- user customizations -------------------------------------------------------
 # this is the place to override or undo settings
-set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-kitty"
+# set -ga terminal-overrides ",*:Smulx=\E[4::%p1%dm"
+
+# Before using xterm-kitty
+# set -g default-terminal "screen-256color"
+# set -ga terminal-overrides ",xterm-256color:Tc"
 # set -ga terminal-overrides ",screen-256color:Tc"
 
 # increase history size
@@ -396,6 +400,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
+# bind -n C-h run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+# bind -n C-j run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+# bind -n C-k run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+# bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
 # Useful tips
 #
