Add tmux cht command

--- a/tmux.conf
+++ b/tmux.conf
@@ -372,6 +372,7 @@ bind l select-pane -R
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
+bind-key -r i run-shell "tmux neww ~/dotfiles/cht.sh"
 # Resize pane shortcuts
 bind -r H resize-pane -L 10
 bind -r J resize-pane -D 5
