--- a/tmux.conf
+++ b/tmux.conf
@@ -389,8 +389,8 @@ bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
 setw -g mode-keys vi
 
 # Buffers to/from Mac clipboard, yay tmux book from pragprog
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 
 # Move windows
 bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
