--- a/tmux.conf
+++ b/tmux.conf
@@ -413,3 +413,7 @@ run -b '~/.tmux/plugins/tpm/tpm'
 # Reorder windows - use prefix first
 # swap-window -s 3 -t
 # move panes - prefix + ctrl + o
+
+# Fig Tmux Integration: Enabled
+source-file ~/.fig/tmux
+# End of Fig Tmux Integration
