--- a/kitty.conf
+++ b/kitty.conf
@@ -20,43 +20,47 @@ cursor_shape block
 
 bell_on_tab no
 
-  # TokyoNight colors for Kitty
-  
-  background #24283b
-  foreground #c0caf5
-  selection_background #364A82
-  selection_foreground #c0caf5
-  url_color #73daca
-  cursor #c0caf5
-  
-  # Tabs
-  active_tab_background #7aa2f7
-  active_tab_foreground #1f2335
-  inactive_tab_background #292e42
-  inactive_tab_foreground #545c7e
-  #tab_bar_background #1D202F
-  
-  # normal
-  color0 #1D202F
-  color1 #f7768e
-  color2 #9ece6a
-  color3 #e0af68
-  color4 #7aa2f7
-  color5 #bb9af7
-  color6 #7dcfff
-  color7 #a9b1d6
-  
-  # bright
-  color8 #414868
-  color9 #f7768e
-  color10 #9ece6a
-  color11 #e0af68
-  color12 #7aa2f7
-  color13 #bb9af7
-  color14 #7dcfff
-  color15 #c0caf5
-  
-  # extended colors
-  color16 #ff9e64
-  color17 #db4b4b
-  
+# Nord Colorscheme for Kitty
+# Based on:
+# - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
+# - https://github.com/arcticicestudio/nord-hyper
+
+foreground            #D8DEE9
+background            #2E3440
+selection_foreground  #000000
+selection_background  #FFFACD
+url_color             #0087BD
+cursor                #81A1C1
+
+# black
+color0   #3B4252
+color8   #4C566A
+
+# red
+color1   #BF616A
+color9   #BF616A
+
+# green
+color2   #A3BE8C
+color10  #A3BE8C
+
+# yellow
+color3   #EBCB8B
+color11  #EBCB8B
+
+# blue
+color4  #81A1C1
+color12 #81A1C1
+
+# magenta
+color5   #B48EAD
+color13  #B48EAD
+
+# cyan
+color6   #88C0D0
+color14  #8FBCBB
+
+# white
+color7   #E5E9F0
+color15  #ECEFF4
+
