--- a/kitty.conf
+++ b/kitty.conf
@@ -20,43 +20,49 @@ cursor_shape block
 
 bell_on_tab no
 
-# Nightfox colors for Kitty
-## name: nordfox
-## upstream: https://github.com/edeneast/nightfox.nvim/raw/main/extra/nordfox/nightfox_kitty.conf
+foreground               #575279
+background               #faf4ed
+selection_foreground     #575279
+selection_background     #eee9e6
 
-background #2e3440
-foreground #b9bfca
-selection_background #3e4655
-selection_foreground #b9bfca
-url_color #a3be8c
-cursor #b9bfca
+url_color                #907aa9
 
-# Tabs
-active_tab_background #81a1c1
-active_tab_foreground #232831
-inactive_tab_background #3e4655
-inactive_tab_foreground #60728a
+cursor                   #9893a5
+cursor_text_color        #575279
 
-# normal
-color0 #3b4252
-color1 #bf616a
-color2 #a3be8c
-color3 #ebcb8b
-color4 #81a1c1
-color5 #b48ead
-color6 #88c0d0
-color7 #e7ecf4
+active_tab_foreground    #575279
+active_tab_background    #f2e9de
+inactive_tab_foreground  #6e6a86
+inactive_tab_background  #faf4ed
 
-# bright
-color8 #465780
-color9 #d06f79
-color10 #b1d196
-color11 #f0d399
-color12 #8cafd2
-color13 #c895bf
-color14 #93ccdc
-color15 #e7ecf4
+# black
+color0   #f2e9de
+color8   #6e6a86
 
-# extended colors
-color16 #c9826b
-color17 #bf88bc
+# red
+color1   #b4637a
+color9   #b4637a
+
+# green
+color2   #286983
+color10  #286983
+
+# yellow
+color3   #ea9d34
+color11  #ea9d34
+
+# blue
+color4   #56949f
+color12  #56949f
+
+# magenta
+color5   #907aa9
+color13  #907aa9
+
+# cyan
+color6   #d7827e
+color14  #d7827e
+
+# white
+color7   #575279
+color15  #575279
