--- a/kitty.conf
+++ b/kitty.conf
@@ -20,49 +20,45 @@ cursor_shape block
 
 bell_on_tab no
 
-foreground               #575279
-background               #faf4ed
-selection_foreground     #575279
-selection_background     #eee9e6
+macos_option_as_alt yes
 
-url_color                #907aa9
-
-cursor                   #9893a5
-cursor_text_color        #575279
-
-active_tab_foreground    #575279
-active_tab_background    #f2e9de
-inactive_tab_foreground  #6e6a86
-inactive_tab_background  #faf4ed
-
-# black
-color0   #f2e9de
-color8   #6e6a86
-
-# red
-color1   #b4637a
-color9   #b4637a
-
-# green
-color2   #286983
-color10  #286983
-
-# yellow
-color3   #ea9d34
-color11  #ea9d34
-
-# blue
-color4   #56949f
-color12  #56949f
-
-# magenta
-color5   #907aa9
-color13  #907aa9
-
-# cyan
-color6   #d7827e
-color14  #d7827e
-
-# white
-color7   #575279
-color15  #575279
+  # TokyoNight colors for Kitty
+  
+  background #24283b
+  foreground #c0caf5
+  selection_background #364A82
+  selection_foreground #c0caf5
+  url_color #73daca
+  cursor #c0caf5
+  
+  # Tabs
+  active_tab_background #7aa2f7
+  active_tab_foreground #1f2335
+  inactive_tab_background #292e42
+  inactive_tab_foreground #545c7e
+  #tab_bar_background #1D202F
+  
+  # normal
+  color0 #1D202F
+  color1 #f7768e
+  color2 #9ece6a
+  color3 #e0af68
+  color4 #7aa2f7
+  color5 #bb9af7
+  color6 #7dcfff
+  color7 #a9b1d6
+  
+  # bright
+  color8 #414868
+  color9 #f7768e
+  color10 #9ece6a
+  color11 #e0af68
+  color12 #7aa2f7
+  color13 #bb9af7
+  color14 #7dcfff
+  color15 #c0caf5
+  
+  # extended colors
+  color16 #ff9e64
+  color17 #db4b4b
+  
