--- a/tmux.conf
+++ b/tmux.conf
@@ -415,18 +415,17 @@ run -b '~/.tmux/plugins/tpm/tpm'
 # Reorder windows - use prefix first
 # swap-window -s 3 -t
 # move panes - prefix + ctrl + o
-#!/usr/bin/env bash
-
 # TokyoNight colors for Tmux
 
-base_0='#7aa2f7'  # blue
-base_1='#a9b1d6'  # gray
-base_2='#7aa2f7'  # mid blue
-base_3='#e0af68'  # yellow
-base_4='#414868'  # Darkest grey
-base_5='#a9b1d6'  # Dark grey
-base_6='#414868'  # Light blue - main
-base_7='#414868'  # green blue - right side
-base_8="#e9e9ed"  # White(ish)
-base_9='#7aa2f7'  # green
-base_10='#f7768e' # Red
+base_0='#2a273f'
+base_1='#ea9a97'
+base_2='#393552'
+base_3='#f6c177'
+base_4='#9ccfd8'
+base_5='#c4a7e7'
+base_6='#2a273f'
+base_7='#393552'
+base_8="#e0def4"
+base_9='#232136'
+base_10='#eb6f92'
+
