--- a/tmux.conf
+++ b/tmux.conf
@@ -420,8 +420,8 @@ run -b '~/.tmux/plugins/tpm/tpm'
 base_0='#2a273f'
 base_1='#ea9a97'
 base_2='#393552'
-base_3='#f6c177'
-base_4='#9ccfd8'
+base_3='#c4a7e7'
+base_4='#393552'
 base_5='#c4a7e7'
 base_6='#2a273f'
 base_7='#393552'
